Moved Eggspawner and updated lang file

--- a/src/main/resources/assets/chaosrealm/lang/en_us.json
+++ b/src/main/resources/assets/chaosrealm/lang/en_us.json
@@ -10,5 +10,7 @@
   "entity.chaosrealm.weirdmob": "Weirdmob",
   "entity.chaosrealm.iceskeleton": "Ice Skeleton",
   "entity.chaosrealm.iceSpider": "Ice Spider",
-  "entity.chaosrealm.hyena": "Hyena"
+  "entity.chaosrealm.hyena": "Hyena",
+  "entity.chaosrealm.platypunk": "Platypunk",
+  "entiy.chaosrealm.stonecrusher": "Stone Crusher"
 }
